2001-12-20  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): canonicalize EXTENDED-CHAR
	to (OR), not to NIL

2001-12-20  Sam Steingold  <sds@gnu.org>

	Minor code tweaks and simplifications:
	(analyze-lambdalist): new MACROLET macro PUSH-OPT
	(closuredummy-add-stack-slot): new function
	(c-LAMBDABODY, c-LET/LET*, c-MULTIPLE-VALUE-BIND, c-FLET)
	(c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET, c-GENERIC-LABELS)
	(c-FUNCALL-INLINE): use it
	(lambda-form-p): new function
	(c-form, inline-callable-function-lambda-p, c-FUNCTION): use it
	(shift-vars): new function
	(c-MAP-on-CARs, c-MAP-on-LISTs, c-MAPC, c-MAPL): use it
	(c-FLET, c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET)
	(c-GENERIC-LABELS): new macro GET-ANODE in their common macrolet
	(inlinable-function-operation-form-p): new function
	(c-FUNCTION-CALL, c-APPLY, c-seqop): use it

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (version) [CROSS]: updated (19071996 --> 20010726)

2001-12-20  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* lispbibl.d (OS_error): use asciz_out_s(), not asciz_out_1(),
	to output a string

2001-12-19  Stefan Kain  <stefan.kain@freenet.de>

	* compiler.lisp: translated all comments

2001-12-17  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): extensive treatment of AND/OR
	and NOT (with flattening and special cases)
	(subtypep): a hack for NOT added; corrected T & NIL special cases

2001-12-17  Sam Steingold  <sds@gnu.org>

	* predtype.d (expand_deftype): check that (CAR TYPE-SPEC) is a
	symbol before calling GET

2001-12-12  Sam Steingold  <sds@gnu.org>

	simplify pathname directory lists
	* pathname.d (subst_coerce_normal_ss, subst_up_dotdot): folded
	into simplify_directory()
	(simplify_directory): new function: coerce to normal simple
	strings, replace ".." with :UP and collapse "foo/../"
	(parse_logical_pathnamestring, PARSE-NAMESTRING, merge_dirs): call it
	(subdir_namestring_parts): handle :UP