@@ -2045,7 +2045,10 @@ echol
 
 # development targets
 echol "makemake : makemake.in"
-echotab "./config.status"
+echotab "./config.status --file=makemake"
+echol
+echol "unixconf.h : unixconf.h.in"
+echotab "./config.status --header=unixconf.h"
 echol
 echol "Makefile : makemake"
 echotab "$0$makemake_args > Makefile.tmp"
